--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "npx nodemon",
     "test": "jest"
   },
   "jest": {
@@ -18,6 +19,7 @@
     "@prisma/client": "^5.19.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "nodemon": "^3.1.4",
     "winston": "^3.14.2",
     "zod": "^3.23.8"
   },
